--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,11 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除字段
       logic-delete-value: 1        # 1 代表已删除
       logic-not-delete-value: 0    # 0 代表未删除
+
+# 阿里云 OSS 配置
+aliyun:
+  oss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id: ${ALIYUN_ACCESS_KEY_ID}
+    access-key-secret: ${ALIYUN_ACCESS_KEY_SECRET}
+    bucket-name: ${ALIYUN_BUCKET_NAME:nano-oj}
